<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search" android:id="@id/search" android:title="@string/search_title" app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:icon="@drawable/ic_help" android:id="@id/instrucciones" android:title="@string/instrucciones" app:showAsAction="collapseActionView|ifRoom" />
    <item android:icon="@drawable/ic_random" android:id="@id/random" android:title="@string/random" app:showAsAction="collapseActionView|ifRoom" />
    <uses-permission android:name="android.permission.INTERNET" />
    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
    <application android:theme="@style/AppTheme" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:allowBackup="true">
        <activity android:label="@string/app_name" android:name="com.guillefix.zombie_soundboard.MainActivity">
            <intent-filter>
                <action android:name="android.intent.action.MAIN" />
                <category android:name="android.intent.category.LAUNCHER" />
            </intent-filter>
            <intent-filter>
                <action android:name="android.intent.action.SEARCH" />
            </intent-filter>
        </activity>
    </application>
    <item android:id="@id/compartir" android:orderInCategory="100" android:title="@string/compartir" app:showAsAction="never" />
    <item android:id="@id/contactar" android:orderInCategory="100" android:title="@string/contactar" app:showAsAction="never" />
    <item android:id="@id/videoRandom" android:orderInCategory="100" android:title="@string/videoRandom" app:showAsAction="never" />
    <item android:id="@id/valorar" android:orderInCategory="100" android:title="@string/valorar" app:showAsAction="never" />
</menu>